tests/field/get_on_null.rev
null.bar // error: only structure instances have properties